--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,7 @@ body {
 
 header {
   border-bottom: solid 1px rgba(0,0,0,0.4);
-  background-color: #183D4E;
+  background-color: #325396;
   color: white;
   overflow: hidden;
   box-shadow: 0 2px 4px rgba(0,0,0,0.2);
